# miniflux-summary-agent

./: .env.example  .gitignore  AGENT.md  DEVELOPMENT.md  LICENSE  README.md  codecov.yml  coverage.xml  docker-compose.yml  main.py  models.py  pyproject.toml  test_article_fetching.py  test_category_rendering.py  test_end_to_end_fetching.py  test_html_stripping.py  test_integration.py  test_models.py
.github/workflows/: codecov.yml  publish.yml  test-publish.yml
miniflux_summary_agent/: __init__.py  __main__.py  cli.py  config.py  core.py  fetcher.py  logging.py  models.py  renderer.py  summarizer.py
templates/: summary.html
tests/: test_article_fetching.py  test_category_rendering.py  test_end_to_end_fetching.py  test_html_stripping.py  test_integration.py  test_models.py
